[gd_scene load_steps=3 format=3 uid="uid://darchetypesel01"]

[ext_resource type="Script" path="res://src/ui/archetype_selection.gd" id="1_script"]
[ext_resource type="Theme" path="res://theme/game_theme.tres" id="2_theme"]

[node name="ArchetypeSelection" type="Control"]
theme = ExtResource("2_theme")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(700, 500)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Choose Your Archetype"
horizontal_alignment = 1

[node name="ContentContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="ArchetypeList" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/ContentContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="DetailsPanel" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="ArchetypeNameLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/ContentContainer/DetailsPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Feeder"

[node name="ArchetypeDescLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/ContentContainer/DetailsPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Eating content specialist. Excels at capacity training and mukbang streams."
autowrap_mode = 2

[node name="Spacer" type="Control" parent="CenterContainer/PanelContainer/MarginContainer/VBox/ContentContainer/DetailsPanel"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="PassivesLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/ContentContainer/DetailsPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.9, 0.6, 1)
text = "Passives:
  +25% capacity training chance
  -10% weight gain"

[node name="Spacer2" type="Control" parent="CenterContainer/PanelContainer/MarginContainer/VBox/ContentContainer/DetailsPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartingLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/ContentContainer/DetailsPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.5, 1)
text = "Starting: $750"

[node name="SlotContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="NameContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="NamePrompt" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/NameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "What should we call you?"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBox/NameContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
placeholder_text = "Your name..."
alignment = 1
max_length = 20
caret_blink = true

[node name="NameHint" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/NameContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "Max 20 characters"
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "WASD: Navigate | E: Select | Q: Back"
horizontal_alignment = 1
